Fix table spacing

--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -4,3 +4,7 @@
   margin: 0 0 60px 0;
   width: 240px;
 }
+
+.cards__item:last-of-type{
+  margin: 0;
+}
