--- a/blocks/table/__cell/table__cell.css
+++ b/blocks/table/__cell/table__cell.css
@@ -1,4 +1,3 @@
 .table__cell{
   width: 250px;
-  margin: 0 0 60px 0;
 }
