--- a/blocks/table/__text/table__text.css
+++ b/blocks/table/__text/table__text.css
@@ -3,5 +3,9 @@
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin:0 0 20px 0;
+  margin:0;
+}
+
+.table__text:nth-of-type(2){
+ margin: 20px 0 0 0;
 }
